force-app/main/default/objects/Proposal__c/fields/Covered_by_Contract__c.field-meta.xml
<CustomField>
    <fullName>Covered_by_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Covered by Contract</label>
    <type>Checkbox</type>
</CustomField>