force-app/main/default/objects/Proposal__c/fields/CustomerStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomerStatus__c</fullName>
    <label>Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Customer Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>