force-app/main/default/objects/Proposal__c/fields/Decline_Date__c.field-meta.xml
<CustomField>
    <fullName>Decline_Date__c</fullName>
    <inlineHelpText>Date customer declined proposal.</inlineHelpText>
    <label>Decline Date</label>
    <type>Date</type>
</CustomField>