force-app/main/default/objects/Proposal__c/fields/Elevators__c.field-meta.xml
<CustomField>
    <fullName>Elevators__c</fullName>
    <label>Elevator(s)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>