force-app/main/default/objects/Proposal__c/fields/Estimate_Number__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Number__c</fullName>
    <label>Estimate Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>