force-app/main/default/objects/Proposal__c/fields/Mate_Notes__c.field-meta.xml
<CustomField>
    <fullName>Mate_Notes__c</fullName>
    <description>Mate support notes on reason for status</description>
    <label>Audit Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>