force-app/main/default/objects/Proposal__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>