force-app/main/default/objects/Proposal__c/fields/Missing_Information__c.field-meta.xml
<CustomField>
    <fullName>Missing_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Information</label>
    <type>Checkbox</type>
</CustomField>