force-app/main/default/objects/Proposal__c/fields/Proposal_Type__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Type__c</fullName>
    <description>Reason that the customer is receiving a proposal</description>
    <label>Proposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Obsolescence</fullName>
            </value>
            <value>
                <fullName>Equipment upgrade</fullName>
            </value>
            <value>
                <fullName>Code upgrade</fullName>
            </value>
            <value>
                <fullName>Vandalism/Abuse/Misuse</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>