force-app/main/default/objects/Proposal__c/fields/Repair__c.field-meta.xml
<CustomField>
    <fullName>Repair__c</fullName>
    <label>Repair</label>
    <length>60</length>
    <type>Text</type>
</CustomField>