force-app/main/default/objects/Proposal__c/fields/Repair_Description__c.field-meta.xml
<CustomField>
    <fullName>Repair_Description__c</fullName>
    <label>Repair Description</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>