force-app/main/default/objects/Proposal__c/fields/Scope_Reasonable__c.field-meta.xml
<CustomField>
    <fullName>Scope_Reasonable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scope Reasonable</label>
    <type>Checkbox</type>
</CustomField>