force-app/main/default/objects/Proposal__c/fields/Unit_OOS__c.field-meta.xml
<CustomField>
    <fullName>Unit_OOS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit OOS</label>
    <type>Checkbox</type>
</CustomField>