force-app/main/default/objects/Proposal__c/fields/Vendor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vendor rep that send the proposal</description>
    <label>Vendor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>