force-app/main/default/objects/Proposal__c/fields/Vendor_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>