force-app/main/default/objects/Proposal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Estimate_Number__c</columns>
    <columns>Date__c</columns>
    <columns>Vendor__c</columns>
    <columns>Elevators__c</columns>
    <columns>Repair__c</columns>
    <columns>Price__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>