force-app/main/default/objects/Proposal__c/listViews/Open_Proposals.listView-meta.xml
<ListView>
    <fullName>Open_Proposals</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Review</value>
    </filters>
    <label>Open Proposals</label>
</ListView>